<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.foreldrepenger</groupId>
    <artifactId>svp-uttak</artifactId>
    <version>${revision}-${sha1}</version>
    <packaging>jar</packaging>

    <properties>
       <jupiter.version>5.9.2</jupiter.version>
        <revision>2.1</revision>
        <sha1>-SNAPSHOT</sha1>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <jacoco.version>0.8.8</jacoco.version>
        <fpsak.nare.version>2.5.3</fpsak.nare.version>
        <fpsak.tidsserie.version>2.6.6</fpsak.tidsserie.version>
        <assertj.version>3.24.2</assertj.version>

        <!-- Sonar felles -->
        <sonar.organization>navikt</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.projectKey>navikt_svp-uttak</sonar.projectKey>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.nav.fpsak.nare</groupId>
            <artifactId>fpsak-nare-core</artifactId>
            <version>${fpsak.nare.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.fpsak.tidsserie</groupId>
            <artifactId>fpsak-tidsserie</artifactId>
            <version>${fpsak.tidsserie.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <scm>
        <connection>scm:git:https://github.com/navikt/svp-uttak.git</connection>
        <developerConnection>scm:git:https://github.com/navikt/svp-uttak.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
     <organization>
        <name>no.nav</name>
        <url>https://github.com/navikt</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
     <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/svp-uttak/</url>
        </repository>
    </distributionManagement>

</project>
